nullaway_error_b96145fd-d30a-48be-be11-a7a8f7d2713c.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/registry/PeerAwareInstanceRegistryImpl.java:678: error: [NullAway] passing @Nullable parameter 'info' where @NonNull is required
                    node.register(info);
                                  ^
